# f15se2-ex

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: comm.h  const.h  dosfunc.c  dosfunc.h  eg3dcam.c  eg3dload.c  eg3dmap.c  eg3dproj.c  eg3drast.c  eg3dview.c  eg3dvp.c  egcode.h  egcombat.c  egdata.c  egdata.h  egfarbuf.c  egfileio.c  egfileio.h  egflight.c  egframe.c  eghudm.c  eghudr.c  eginput.c  eginput.h  egkeys.c  egkeys.h  egmain.c  egmath.c  egmath.h  egpic.c  egsphere.c  egstubs.c  egsys.c  egtacmap.c  egtacmap.h  egtarget.c  egtarget.h  egtgt2.c  egthreat.c  egtick.c  (+58 more)
src/asound/: asopl.c  asopl.h  asopl_inst.inc  asound_model.c  asound_model.h  asound_sdl.c
src/compat64/: dos.h  egregsh.c
src/shared/: cleanup.c  common.h  drawstr.c  file_io.c  filepic.c  miscimpl.c  ovlimpl.c  picimpl.c  textfmt.c  timer.c
tests/: eg3drast_internal_behavior_tests.cpp  eg3drast_link_stubs.cpp  eg_main_behavior_tests.cpp  egdata_link_stubs.cpp  egmath_file_link_stubs.cpp  end_runtime_behavior_tests.cpp  gameplay_behavior_tests.cpp  geometry_behavior_tests.cpp  gfx_impl_behavior_tests.cpp  input_behavior_tests.cpp  launcher_runtime_behavior_tests.cpp  original_behavior_tests.cpp  original_egmath_link_stubs.cpp  posix_test_compat.h  r3d_render_stubs.cpp  start_behavior_tests.cpp  start_main_autostart_behavior_tests.cpp  start_main_behavior_tests.cpp  start_runtime_behavior_tests.cpp  sys_behavior_tests.cpp  utility_stubs.cpp
